# mercator

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
configs/research/: citadel_articles.json
frontend/: package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/components/AgentPanel/: AgentPanel.tsx
frontend/src/components/BondDetails/: BondDetails.tsx
frontend/src/components/BondGrid/: BondGrid.tsx
frontend/src/components/CarryRollPanel/: CarryRollPanel.tsx
frontend/src/components/LivePnlPanel/: LivePnlPanel.tsx
frontend/src/components/MarketSummary/: MarketSummary.tsx
frontend/src/components/PortfolioPanel/: PortfolioPanel.tsx
frontend/src/components/RelativeValuePanel/: RelativeValuePanel.tsx
frontend/src/components/ReplayPanel/: ReplayPanel.tsx
frontend/src/components/RfqAnalyticsPanel/: RfqAnalyticsPanel.tsx
frontend/src/components/RfqPanel/: RfqPanel.tsx
frontend/src/components/ScenarioPanel/: ScenarioPanel.tsx
frontend/src/hooks/: usePriceStream.ts  useRfqStream.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts  market.ts  rfq.ts
frontend/src/store/: useMarketStore.ts
frontend/src/types/: bond.ts
infra/prometheus/: prometheus.yml
scripts/: check_infrastructure.py  load_evaluated_prices.py
services/agent-runtime/mercator_agent/: graph.py  main.py
services/agent-runtime/mercator_agent/nodes/: analyze_relative_value.py  compose_brief.py  normalize_request.py  resolve_issuer.py  retrieve_prices.py  retrieve_research.py  validate_evidence.py
services/agent-runtime/mercator_agent/state/: models.py
services/agent-runtime/mercator_agent/tests/: test_graph.py  test_relative_value.py
services/agent-runtime/mercator_agent/tools/: issuer_resolution.py  pricing.py  relative_value.py  research.py
services/analytics/migrations/: 001_evaluated_prices.sql  002_quality_events.sql  003_quote_reconciliation.sql  004_curve_event_replay.sql
services/market-api/app/: carry_roll.py  config.py  hedging.py  historical_var.py  main.py  models.py  portfolio.py  relative_value.py  repository.py  risk_decomposition.py  risk_optimizer.py  scenario.py  scenario_analysis.py  stress.py
services/market-api/app/static/: workbench.html
services/market-api/tests/: test_carry_roll.py  test_hedging.py  test_historical_var.py  test_portfolio.py  test_relative_value.py  test_risk_decomposition.py  test_risk_optimizer.py  test_scenario.py  test_scenario_analysis.py  test_stress.py
services/pricing-engine/: CMakeLists.txt
services/pricing-engine/benchmarks/: incremental_repricing.cpp  selective_repricing.cpp
services/pricing-engine/include/mercator/pricing/: analytics.hpp  cashflow.hpp  curve_update.hpp  data_quality.hpp  dependency_graph.hpp  dependency_resolver.hpp  evaluated_price.hpp  quote_reconciliation.hpp  repricing_service.hpp  yield_curve.hpp
services/pricing-engine/src/: analytics.cpp  cashflow.cpp  data_quality.cpp  dependency_graph.cpp  dependency_resolver.cpp  main.cpp  quote_reconciliation.cpp  repricing_demo.cpp  repricing_service.cpp  yield_curve.cpp
services/pricing-engine/tests/: analytics_test.cpp  clean_price_test.cpp  data_quality_test.cpp  dependency_graph_test.cpp  quote_reconciliation_test.cpp  yield_curve_test.cpp
services/reference-data/app/: config.py  database.py  main.py  models.py  reconciliation.py  reconciliation_models.py  repository.py
services/reference-data/migrations/: 001_instrument_versions.sql  003_source_reconciliation.sql  004_seed_sources.sql  005_research_documents.sql  007_sec_filings.sql  008_sec_filing_documents.sql  009_sec_credit_signals.sql  010_hybrid_research_search.sql  011_curve_dependencies.sql
services/reference-data/scripts/: apply_rating_correction.py  generate_curve_dependencies.py  generate_instruments.py  seed_conflicting_ratings.py
services/reference-data/tests/: test_reconciliation.py
services/research-ingestion/mercator_ingestion/extractors/: article.py  credit_signals.py  filing_chunks.py  sec_sections.py
services/research-ingestion/mercator_ingestion/models/: document.py
services/research-ingestion/mercator_ingestion/sources/: base.py  citadel_market_insights.py  http_client.py  sec_edgar.py
services/research-ingestion/mercator_ingestion/storage/: credit_postgres.py  postgres.py  sec_postgres.py
services/research-ingestion/mercator_ingestion/tests/: test_credit_signals.py  test_sec_edgar.py  test_sec_sections.py
services/research-ingestion/scripts/: build_credit_index.py  import_link_catalog.py  ingest_citadel.py  ingest_sec_documents.py  ingest_sec_issuer.py  ingest_url.py
services/research-search/app/: config.py  hybrid_search.py  main.py  models.py  repository.py  semantic_index.py
services/research-search/scripts/: build_semantic_index.py
services/research-search/tests/: test_search_models.py
services/rfq-api/app/: dealer_engine.py  kafka.py  ledger.py  live_risk.py  main.py  metrics.py  models.py  repository.py
services/rfq-api/migrations/: 001_rfq.sql  002_dealer_quotes.sql  003_execution_workflow.sql  004_position_ledger.sql  005_execution_accounts.sql  006_rfq_analytics.sql
services/rfq-api/scripts/: seed_demo_account.py
services/rfq-api/tests/: test_quote_selection.py
services/rfq-stream/app/: main.py
services/streaming-pricer/app/: consumer.py  main.py  models.py
services/streaming-pricer/scripts/: load_dependency_index.py  produce_curve_updates.py  replay_curve_events.py
services/streaming-pricer/tests/: test_selective_repricing.py
